Fix horizontal scrollbar on t-sidebyside

--- a/style.css
+++ b/style.css
@@ -151,10 +151,10 @@
 @layer techstyle_utils {
   .t-sidebyside {
     margin: var(--spacing-around) 0;
-    padding-inline: var(--spacing-around);
 
-    /* Full-width */
-    width: 100vw;
+    /* Full-width, with some "padding" */
+    /* (Using width:100vw and actual padding causes a horizontal scrollbar - not sure why...) */
+    width: calc(100vw - 2 * var(--spacing-around));
     position: relative;
     left: 50%;
     transform: translateX(-50%);
